# Mahjong-Backend

./: .gitignore  Cargo.toml  README.MD  Rocket.toml  diesel_setup.sh  env-example  mahjong_game.sqlite  rerun.sh  start.sh
migrations/2022-09-18-045512_create_room/: down.sql  up.sql
migrations/2022-09-18-045822_create_round/: down.sql  up.sql
migrations/2022-10-09-122547_game_table/: down.sql  up.sql
migrations/2022-10-09-123206_player_table/: down.sql  up.sql
migrations/2022-10-09-123550_round_table/: down.sql  up.sql
migrations/2022-12-16-130041_create_room/: down.sql  up.sql
migrations/2022-12-16-130705_create_player/: down.sql  up.sql
migrations/2022-12-16-131128_create_round/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  utils.rs
src/routes/: game.rs  mod.rs  player.rs  room.rs  round.rs
src/tests/: mod.rs
